--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.9.2",
+    "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
     "next": "15.3.1",
     "react": "^19.0.0",
